--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2004-12-25  higepon  <higepon@users.sourceforge.jp>
 
+        * apps/gui/hige3D/Canvas.h : 非推奨APIの使用をやめた(FileInputStream -> monapi_call_file_read_data) 
+
         * src/servers/moniter/main.cpp : 非推奨APIの使用をやめた(FileInputStream -> monapi_call_file_read_data) 
 
         * apps/non-gui/jpegdemo/jpegdemo.cpp : 非推奨APIの使用をやめた(FileInputStream -> monapi_call_file_read_data) 
