--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,14 @@
+2004-12-30  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/file/FDCDriver.h: 追加
+
+        * src/servers/file/fs.cpp: 追加
+
+        * src/servers/file/FDCDriver.cpp: 追加
+
+        * src/servers/file/ISO9660.cpp: class Fileが名前が衝突したので適当なnamespaceをでっち上げた。
+
+
 2004-12-27  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/file/FDCDriver.cpp: とりあえずコンパイルを通した
