--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-30  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/non-gui/ata/main.cpp (MonaMain): CDREADをバイナリエディタ風に
+
 2004-01-29  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui/Makefile: FIRE 復活
