--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-01-31  higepon  <higepon@users.sourceforge.jp>
+
+        * apps/non-gui/cdfsread/main.cpp (MonaMain): CDFSREADツールの開発ディレクトリを作成
+
 2005-01-30  higepon  <higepon@users.sourceforge.jp>
 
         * apps/non-gui/ata/main.cpp (MonaMain): CDREADをバイナリエディタ風に
