--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,7 @@
 2005-01-31  higepon  <higepon@users.sourceforge.jp>
 
+        * MonaNET16を追加。thanks 名無しさん
+
         * src/lib/monapi/Keys.cpp: keyTopMapJP109Sの '|' -> '_'に変更。
 
         * src/servers/shell/Shell.cpp (onKeyDown): -(マイナス)を入力できない不具合を修整。
