--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-01  csharp  <csharp@users.sourceforge.jp>
+
+        * src/tools/MonaNET16/Makefile: 最適化レベルを1に変更
+
+        * src/kernel/secondboot.asm: 最適化レベル1で再生成したものに置換
+
 2005-01-31  higepon  <higepon@users.sourceforge.jp>
 
         * MonaNET16を追加。thanks 名無しさん
