Modified Files: 	COPYRIGHT ChangeLog bin/Makefile src/kernel/Makefile 	src/kernel/firstboot.asm src/kernel/global.h 	src/kernel/kernel.cpp src/kernel/secondboot.asm 	tools/MonaNET16/Makefile tools/MonaNET16/secondboot32.asm 	tools/MonaNET16/IL2Asm16/IL2Asm16.cs 	tools/MonaNET16/IL2Asm16/X86Code.cs 	tools/MonaNET16/SecondBoot/Console.cs 	tools/MonaNET16/SecondBoot/FDC.cs 	tools/MonaNET16/SecondBoot/SecondBoot.cs Removed Files: 	bin/terminater.head

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-02  csharp  <csharp@users.sourceforge.jp>
+
+        * src/kernel/firstboot.asm, secondboot.asm: バイナリをファイルごとに読み込み
+
 2005-02-01  higepon  <higepon@users.sourceforge.jp>
 
         * MonaForms, BayGUIアプリのディレクトリを分ける様に修正
