--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-05  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/file/ISO9660FileSystem.cpp (FindDirectoryEntry): ルートディレクトリを取り扱えるように修整した。
+
 2005-02-04  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/shell/Shell.cpp : cd0: コマンドの追加。今はまだ使えない。
