--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-07  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/shell/Shell.cpp (hasDriveLetter): ’Ç‰ÁB
+
 2004-02-07  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui/Makefile: gshell‘Î‰
