--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-02-12  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/gshell/gshell.cpp: 存在しないディレクトリでlsすると落ちる不具合修正＆各種修正
+
 2005-02-12  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/file/file.cpp : CD-ROMが見つからないときにファイルサーバが落ちてしまうバグを修正
