--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,13 @@
+2004-02-13  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/glaunch/glaunch.cpp: メニューやアイコンを描画するように書き直し
+
+        * apps/baygui/gshecll/gshell.cpp: タイトル変更
+
+        * include/baygui/Window.h: GLAUNCH.EX5用にクラス変数の制限を変更
+
+        * src/lib/baygui/Window.cpp: GLAUNCH.EX5も閉じられるように変更
+
 2005-02-13  higepon  <higepon@users.sourceforge.jp>
 
         * include/sys/types.h (DEBUG_READ_TRACE): これを有効にするとATAPIのログをシリアルポートに吐く。
