--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,17 @@
+2005-03-03  higepon  <higepon@users.sourceforge.jp>
+
+        * samples/non-gui/hello/hello.cpp (MAIN_10): タイマーサンプルを追加。MAIN_10を defineしてください。
+
+        * src/lib/monapi/syscall.cpp (syscall_timer): 追加。
+                                             (timer): 追加。
+
+        * src/kernel/Scheduler.cpp (Sleep): タイマー用に拡張。
+                             (WakeupTimer): タイマー用に拡張。
+
+        * src/kernel/syscalls.cpp: タイマーシステムコール追加。
+
+        * include/sys/types.h (SYSTEM_CALL_TIMER): タイマー追加。
+
 2004-03-02  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui/guitest1/guitest1.cpp: Scrollbar 追加
