--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,11 @@
 2005-03-15  higepon  <higepon@users.sourceforge.jp>
 
+        * src/servers/file/IDEDriver.cpp (protocolInterrupt): マクロ MONAPI_WAIT_INTERRUPTを使用するように変更。
+
+        * src/servers/file/FDCDriver.cpp (waitInterrupt): マクロ MONAPI_WAIT_INTERRUPTを使用するように変更。
+
+        * src/lib/monapi/io.cpp (monapi_wait_interrupt): 割り込み待ち関数をmonapiにライブラリとして追加。
+
         * src/servers/file/IDEDriver.cpp (protocolInterrupt): 別スレッドで割り込みメッセージを取得する方法を廃止し。
                                                               タイムアウトつきの割り込み待ちを行うようにした。
                                                               まだ動作が不安定なのでCD0:の使用はしないでください。
