motor off bug fix

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,8 @@
 2005-03-16  higepon  <higepon@users.sourceforge.jp>
 
+        * src/servers/file/file.cpp (fdInitialize): fd->motorAutoOff()し忘れの不具合を修正。
+
+        * src/kernel/syscalls.cpp : indent調整。
 
         * ↓結構修正したので#if 0でオリジナルを残してあります。baysideさんに確認してもらわないと。
 
