--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,5 +1,9 @@
 2005-03-17  higepon  <higepon@users.sourceforge.jp>
 
+        * src/servers/file/main.cpp : Initialize(true)とするとCDブートイメージ用。
+
+        * src/servers/file/file : 適切な変数・関数名をつけた。 
+
         * src/servers/file/file.cpp : 関数分割のリファクタリング。動作確認OK. 一時タグ ref2をつけた。
 
         * apps/baygui/gshell/gshell.cpp: STDOUT実験用コードの削除。
