--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-17  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/mblupin/mblupin.cpp: ç∑Çµë÷Ç¶
+
 2005-03-17  higepon  <higepon@users.sourceforge.jp>
 
         * bin/root/SERVERS/.cvsignore: BN5í«â¡ÅB
