*** empty log message ***

--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-17  higepon  <higepon@users.sourceforge.jp>
+
+        * src/servers/file/file.cpp : ‘å•¶š¬•¶š‚ğ‹æ•Ê‚µ‚È‚¢‚æ‚¤‚É•ÏXB
+
 2004-03-17  bayside  <bayside@users.sourceforge.jp>
 
         * apps/baygui/mblupin/mblupin.cpp: ·‚µ‘Ö‚¦
