--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-19  higepon  <higepon@users.sourceforge.jp>
+
+        * Make変更前なので 一時タグ ref5をつけた。
+
 2005-03-17  higepon  <higepon@users.sourceforge.jp>
 
         * src/servers/file/file.cpp : 大文字小文字を区別しないように変更。
