--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-27  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/PageManager.cpp (stopPaging): Takaさん指摘のバグ修正。
+
 2004-03-22  bayside  <bayside@users.sourceforge.jp>
 
         * bin/iso/MONITOR.CFG: imesvr復活
