--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-02  higepon  <higepon@users.sourceforge.jp>
+
+        * src/kernel/PageManager.cpp (reatePageDirectoryForV86): 使用していないので削除。thanks TAKAさん。
+                                     (getKernelDirectory): 使用していないので削除。 thanks TAKAさん。
+
 2005-03-27  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/PageManager.cpp (stopPaging): Takaさん指摘のバグ修正。
