--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,3 +1,11 @@
+2004-04-03  bayside  <bayside@users.sourceforge.jp>
+
+        * apps/baygui/Makefile: gtimer追加
+
+        * apps/baygui/gtimer/gtimer.cpp: gtimer追加
+
+        * apps/baygui/gtimer/Makefile: gtimer追加
+
 2005-04-02  higepon  <higepon@users.sourceforge.jp>
 
         * src/kernel/PageManager.cpp (reatePageDirectoryForV86): 使用していないので削除。thanks TAKAさん。
