--- a/Mona/ChangeLog
+++ b/Mona/ChangeLog
@@ -1,8 +1,12 @@
 2005-05-04  shadow  <shadowin@users.sourceforge.jp>
 
-        * monalibc/math.cpp: log exp pow’Ç‰Á
+        * monalibc/math.cpp: log exp pow log10 ceil’Ç‰Á
 
-        * include/monalibc/math.cpp: log exp pow’Ç‰Á
+        * include/monalibc/math.cpp: log exp pow log10 ceil’Ç‰Á
+
+        * monalibc/stdlib.cpp: abs labs div ldiv’Ç‰Á
+
+        * include/monalibc/stdlib.cpp: abs labs div ldiv’Ç‰Á
 
 2005-05-03  higepon  <higepon@users.sourceforge.jp>
 
